[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -73.5
margin_bottom = 73.5
custom_fonts/font = SubResource( 1 )
text = "Pak de poen!
AxSoft"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 82.0
custom_constants/margin_right = 10
custom_constants/margin_top = 30
custom_constants/margin_left = 10

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 30.0
margin_right = 470.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.863281, 0.365862, 0.0674099, 1 )
text = "0"
valign = 1

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 30.0
margin_right = 470.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.862745, 0.364706, 0.0666667, 1 )
text = "0"
align = 2
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 10

[node name="Score" type="Label" parent="MarginContainer2"]
margin_left = 10.0
margin_top = 5.0
margin_right = 460.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Score"

[node name="Time" type="Label" parent="MarginContainer2"]
margin_left = 10.0
margin_top = 5.0
margin_right = 460.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Tijd"
align = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -150.0
margin_right = 46.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 4 )
text = "Start"
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
